apps/sealed-secrets-web/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  name: sealed-secrets-web
spec: {}
